Use QOverload::of instead of qOverload

Fixes build with MSVC

BUG: 393395